--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -39,13 +39,13 @@
     </nav>
     <main class="page contact-page">
         <section class="portfolio-block contact">
-            <div class="container text-center">
+            <div class="container">
                 <div class="heading">
-                    <h2>GAMES COMING SOON</h2>
+                    <h2>coming soon download app</h2>
                 </div>
             </div>
-            <div class="container text-center"><button class="btn btn-primary" type="button" style="font-size: 32px;">Play Now</button></div>
-            <div class="container"></div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
+            <div class="container text-center"><img src="assets/img/900px-Crab_Nebula.jpg"></div>
+        </section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
     <footer class="page-footer">
