--- a/eventapi/html/allevents/project.html
+++ b/eventapi/html/allevents/project.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+    <link rel="stylesheet" href="assets/css/Social-Icons.css">
 </head>
 
 <body>
@@ -50,6 +51,7 @@
             <p>It is a very recent topic and it has just begun its study, which makes it a great challenge. Our approach to developing this project is to orient it towards education. <br><br>The tools used for the development are html, javascript, but we
                 created this website and this app so everyone can use it without any problem or previous knowledge.</p><img src="assets/img/900px-Crab_Nebula.jpg"></section>
     </main>
+    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
     <footer class="page-footer">
         <div class="container">
             <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
