--- a/eventapi/html/allevents/aboutus.html
+++ b/eventapi/html/allevents/aboutus.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>CV - Brand</title>
+    <title>About us</title>
     <meta name="description" content="GW EINSTEIN">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -18,41 +17,58 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <link rel="stylesheet" href="assets/css/Social-Icons.css">
-</head>
-
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">GW EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="aboutus.html"><strong>About us</strong><br></a></li>
-                </ul>
-            </div>
+      <div class="container"><a class="navbar-brand logo" href="#">GW
+          EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span
+
+            class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="nav navbar-nav ml-auto">
+            <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact
+                with us</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link active"
+
+                href="aboutus.html"><strong>About us</strong></a></li>
+          </ul>
         </div>
+      </div>
     </nav>
     <main class="page cv-page">
-        <section class="portfolio-block block-intro border-bottom">
-            <div class="container">
-                <div class="about-me">
-                    <p>We are a team that wants people to get to know more about Physics, specially the Gravitational Wave's field. This science topic be should be accessible to anybody who wants to learn about Astrophysics. We've created an app to organize
-                        and explain in a better way how gravitational waves, and other electromagnetic events works, and how are they detected and to teach everyone this is something every human being could learn, from children to grown-up-people. Also,
-                        this could be used in science reaserch or in Education field. It's like having NASA in your backyard!</p>
-                </div>
-            </div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
-    </main>
-    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
-    <footer class="page-footer">
+      <section class="portfolio-block block-intro border-bottom">
         <div class="container">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
-            <div class="social-icons"></div>
+          <div class="about-me">
+            <p>We are a team that wants people to get to know more about
+              Physics, specially the Gravitational Wave's field. This science
+              topic be should be accessible to anybody who wants to learn about
+              Astrophysics. We've created an app to organize and explain in a
+              better way how gravitational waves, and other electromagnetic
+              events works, and how are they detected and to teach everyone this
+              is something every human being could learn, from children to
+              grown-up-people. Also, this could be used in science reaserch or
+              in Education field. It's like having NASA in your backyard!</p>
+          </div>
         </div>
+        <img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
+    </main>
+    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a
+
+        href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
+
+        href="#"><i class="icon ion-social-youtube"></i></a></div>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About
+            us</a></div>
+        <a href="contact.html">Contact with us</a>
+        <div class="social-icons"></div>
+      </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -60,6 +76,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
-</body>
-
+  </body>
 </html>
