--- a/eventapi/html/allevents/project.html
+++ b/eventapi/html/allevents/project.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>CV - Brand</title>
+    <title>Project</title>
     <meta name="description" content="GW EINSTEIN">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -18,45 +17,74 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <link rel="stylesheet" href="assets/css/Social-Icons.css">
-</head>
-
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">GW EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="project.html">Project</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
-                </ul>
-            </div>
+      <div class="container"><a class="navbar-brand logo" href="#">GW
+          EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span
+
+            class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="nav navbar-nav ml-auto">
+            <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link active"
+
+                href="project.html">Project</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact
+                with us</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About
+                  us</strong></a></li>
+          </ul>
         </div>
+      </div>
     </nav>
     <main class="page cv-page">
-        <section class="portfolio-block block-intro border-bottom">
-            <div class="container">
-                <div class="about-me">
-                    <p></p>
-                </div>
-            </div>
-            <p><br>We developed an application to organize the information about gravitational waves and other physics topic related to electromagnetic events. It is important for research, but we think and want this to be used in education and observation.
-                It gives you the possibility to find this kind of information in a single site, with origin in several sources. It works as a catalog and also as an information page: information about gravity, gravitational waves, radiation, and others.
-                So if you are a person that knows anything about physics, you can access to this information and have the possibility of studying and understanding it. We would like students and teachers, even children to get in this app and use it as
-                an information site, which is accessible, understandable and easy-going. So we are trying to improve it and to add some images, sounds, videos, and other content that anyone can enjoy and use. We want anybody to be science's thirsty!<br><br></p>
-            <p>It is a very recent topic and it has just begun its study, which makes it a great challenge. Our approach to developing this project is to orient it towards education. <br><br>The tools used for the development are html, javascript, but we
-                created this website and this app so everyone can use it without any problem or previous knowledge.</p><img src="assets/img/900px-Crab_Nebula.jpg"></section>
-    </main>
-    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
-    <footer class="page-footer">
+      <section class="portfolio-block block-intro border-bottom">
         <div class="container">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
-            <div class="social-icons"></div>
+          <div class="about-me">
+            <p></p>
+          </div>
         </div>
+        <p><br>
+          We developed an application to organize the information about
+          gravitational waves and other physics topic related to electromagnetic
+          events. It is important for research, but we think and want this to be
+          used in education and observation. It gives you the possibility to
+          find this kind of information in a single site, with origin in several
+          sources. It works as a catalog and also as an information page:
+          information about gravity, gravitational waves, radiation, and others.
+          So if you are a person that knows anything about physics, you can
+          access to this information and have the possibility of studying and
+          understanding it. We would like students and teachers, even children
+          to get in this app and use it as an information site, which is
+          accessible, understandable and easy-going. So we are trying to improve
+          it and to add some images, sounds, videos, and other content that
+          anyone can enjoy and use. We want anybody to be science's thirsty!<br>
+        </p>
+        <p>It is a very recent topic and it has just begun its study, which
+          makes it a great challenge. Our approach to developing this project is
+          to orient it towards education. <br>
+          <br>
+          The tools used for the development are html, javascript, but we
+          created this website and this app so everyone can use it without any
+          problem or previous knowledge.</p>
+        <img src="assets/img/900px-Crab_Nebula.jpg"></section>
+    </main>
+    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a
+
+        href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
+
+        href="#"><i class="icon ion-social-youtube"></i></a></div>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About
+            us</a></div>
+        <a href="contact.html">Contact with us</a>
+        <div class="social-icons"></div>
+      </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -64,6 +92,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
-</body>
-
+  </body>
 </html>
