--- a/eventapi/html/allevents/catalague.html
+++ b/eventapi/html/allevents/catalague.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>CV - Brand</title>
+    <title>Catalogue</title>
     <meta name="description" content="GW EINSTEIN">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -18,60 +17,75 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <link rel="stylesheet" href="assets/css/Social-Icons.css">
-</head>
-
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">GW EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
-                </ul>
-            </div>
+      <div class="container"><a class="navbar-brand logo" href="#">GW
+          EINSTEIN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span
+
+            class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="nav navbar-nav ml-auto">
+            <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact
+                with us</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About
+                  us</strong></a></li>
+          </ul>
         </div>
+      </div>
     </nav>
     <main class="page cv-page">
-        <section class="portfolio-block block-intro border-bottom">
-            <div class="container text-center">
-                <div class="about-me">
-                    <p style="font-family: 'Abril Fatface', cursive;">Catalogue</p>
-                </div>
-            </div>
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 814</a></th>
-                            <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 521</a></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 520</a></td>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 425</a></td>
-                        </tr>
-                        <tr>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 412</a></td>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 414</a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-    </main>
-    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
-    <footer class="page-footer">
-        <div class="container">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
-            <div class="social-icons"></div>
+      <section class="portfolio-block block-intro border-bottom">
+        <div class="container text-center">
+          <div class="about-me">
+            <p style="font-family: 'Abril Fatface', cursive;">Catalogue</p>
+          </div>
         </div>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN
+                    814</a></th>
+                <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN
+                    521</a></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN
+                    520</a></td>
+                <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN
+                    425</a></td>
+              </tr>
+              <tr>
+                <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN
+                    412</a></td>
+                <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN
+                    414</a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+    </main>
+    <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a
+
+        href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
+
+        href="#"><i class="icon ion-social-youtube"></i></a></div>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About
+            us</a></div>
+        <a href="contact.html">Contact with us</a>
+        <div class="social-icons"></div>
+      </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -79,6 +93,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
-</body>
-
+  </body>
 </html>
